feat（wms）：优化 inventory 的库存加锁，防止并发问题